# UnityProject

./: README.md
Assets/Plugins/: HarmonyNativePlugin.cs
Assets/Plugins/Editor/: AssetConverter.cs  OniroExportPlugin.cs
OniroExport/: build.sh
OniroExport/entry/: CMakeLists.txt  build-profile.json5  module.json5
OniroExport/entry/src/main/cpp/: GraphicsBridge.cpp  UnityHarmonyBridge.h  libunity_bridge.cpp  native_engine.h
OniroExport/entry/src/main/ets/MainAbility/: MainAbility.ets  MainAbility.ts
OniroExport/entry/src/main/ets/pages/: Index.ets
OniroExport/entry/src/main/resources/base/element/: string.json
